tests/neg-custom-args/captures/i23582.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23582.scala:27:26 ---------------------------------------
27 |    parReduce(1 to 1000): (x, y) => // error
   |                          ^
   |Found:    (x: Int, y: Int) ->{write, read} Int
   |Required: (Int, Int) ->{any.only[Read]} Int
   |
   |Note that capability `write` cannot flow into capture set {any.only[Read]}.
   |
   |where:    any is a root capability created in method test when checking argument to parameter op of method parReduce
   |
28 |      write(x)
29 |      x + y + read()
   |
   | longer explanation available when compiling with `-explain`
